fix: fix classname overlap

--- a/client/src/app/components/header.css
+++ b/client/src/app/components/header.css
@@ -5,7 +5,7 @@
   padding: 0 400px;
 }
 
-.flex-row {
+.header-flex-row {
   display: flex;
   flex-direction: row;
 }
